Rearrange and similarity check

--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -52,47 +52,70 @@
             </div>
         </div>
     </div>
-    <div class="row">  
+    <div class="row"> 
         <div class="column">
-            {% if answer_text %}
-            <h2>Answer Given:</h2>
-            <p>According to the image, The answer given is {{ answer_text }}</p>
+            {% if answer_segments_src %}
+                <h2>Answer Segments:</h2>
+                {% for segment_src in answer_segments_src %}
+                    <img src="{{ segment_src }}" alt="Answer Segment" width="400">
+                {% endfor %}
             {% endif %}
-        </div>
-        <div class="column"> 
-            {% if marking_text %}
-            <h2>Expected answer:</h2>
-            <p>According to the marking scheme, The answer expected is {{ marking_text }}</p>
+        </div> 
+        <div class="column">
+            {% if answer_texts %}
+                <h2>Texts in Answer Segments:</h2>
+                {% for text in answer_texts %}
+                    <p>{{ text }}</p>
+                {% endfor %}
             {% endif %}
         </div>
     </div>
     <div class="row">  
         <div class="column">
-            {% if answer_modified_src %} 
-            <h2>Processed Answer Image:</h2>
-            <img src="{{ answer_modified_src }}" alt="Processed Answer Image" width="400">
+            {% if marking_segments_src %}
+                <h2>Marking Segments:</h2>
+                {% for segment_src in marking_segments_src %}
+                    <img src="{{ segment_src }}" alt="Marking Segment" width="400">
+                {% endfor %}
             {% endif %}
         </div>
-        <div class="column"> 
-            {% if evaluation_answer_marking %}
-            <h2>Marking Evaluation Result:</h2>
-            <p>According to the marking scheme, The answer is {{ evaluation_answer_marking }}</p>
+        <div class="column">  
+            {% if marking_texts %}
+                <h2>Texts in Marking Segments:</h2>
+                {% for text in marking_texts %}
+                    <p>{{ text }}</p>
+                {% endfor %}
             {% endif %}
         </div>
     </div>
-    <div class="row">   
-        <div class="column"> 
-            {% if evaluation_answer_chatgpt %}
-            <h2>More Facts</h2>
-            <p>{{ evaluation_answer_chatgpt }}</p>
+    <div class="row">  
+        <div class="column">
+            {% if reordered_answer_texts %}
+                <h2>Reorderd Answers</h2>
+                {% for text in reordered_answer_texts %}
+                    <p>{{ text }}</p>
+                {% endfor %}
             {% endif %}
         </div>
-        <div class="column"> 
-            {% if marks %}
-            <h2>Total Marks</h2>
-            <p>{{ marks }}</p>
+        <div class="column">
+            {% if reordered_answer_texts %}
+                <h2>Reorderd Markings</h2>
+                {% for text in reordered_marking_texts %}
+                    <p>{{ text }}</p>
+                {% endfor %}
+            {% endif %}
+        </div>
+    </div>
+    <div class="row">  
+        <div class="column">
+            {% if similarity_results %}
+                <h2>Reorderd Answers</h2>
+                {% for text in similarity_results %}
+                    <p>{{ text }}</p>
+                {% endfor %}
             {% endif %}
         </div>
     </div>
 </body>
 </html>
+
